--- a/src/Pixsper.Cueordinator/Pixsper.Cueordinator.csproj
+++ b/src/Pixsper.Cueordinator/Pixsper.Cueordinator.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.4" />
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.4" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
         <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="8.2.0" />
         <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.2.3">
           <PrivateAssets>all</PrivateAssets>
