--- a/src/Pixsper.Cueordinator/Pixsper.Cueordinator.csproj
+++ b/src/Pixsper.Cueordinator/Pixsper.Cueordinator.csproj
@@ -25,7 +25,13 @@
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.4" />
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.4" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.4" />
+        <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+        <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
+        <PackageReference Include="OscCore" Version="1.0.5" />
         <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="8.2.0" />
         <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.2.3">
           <PrivateAssets>all</PrivateAssets>
@@ -41,5 +47,11 @@
         <AvaloniaResource Include="$(ProjectDir)..\..\resources\*.ico">
             <Link>Resources\%(FileName)%(Extension)</Link>
         </AvaloniaResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Views\ConfigWindow.axaml.cs">
+        <DependentUpon>ConfigWindow.axaml</DependentUpon>
+      </Compile>
     </ItemGroup>
 </Project>
