--- a/src/Pixsper.Cueordinator/Pixsper.Cueordinator.csproj
+++ b/src/Pixsper.Cueordinator/Pixsper.Cueordinator.csproj
@@ -6,7 +6,7 @@
 
         <Company>Pixsper</Company>
         <Description>Cueordinator tool for cue list synchronisation</Description>
-        <Copyright>Copyright © 2023 Pixsper Ltd.</Copyright>
+        <Copyright>Copyright © 2024 Pixsper Ltd.</Copyright>
 
         <Nullable>enable</Nullable>
         <WarningsAsErrors>nullable</WarningsAsErrors>
@@ -18,21 +18,34 @@
         <ApplicationIcon>..\..\resources\icon_tray_black.ico</ApplicationIcon>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(RuntimeIdentifier)' == 'osx-x64' Or '$(RuntimeIdentifier)' == 'osx-arm64'">
+        <PublishReadyToRun>false</PublishReadyToRun>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
+        <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+        <IncludeSymbolsInSingleFile>false</IncludeSymbolsInSingleFile>
+        <EnableCompressionInSingleFile>false</EnableCompressionInSingleFile>
+        <DebugType>embedded</DebugType>
+        <UseAppHost>true</UseAppHost>
+    </PropertyGroup>
+
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.0.10" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.10" />
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.10" />
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10" />
+        <PackageReference Include="Avalonia" Version="11.1.0-beta1" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.1.0-beta1" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.0-beta1" />
+        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.0-beta1" />
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0-beta1" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.0-beta1" />
+        <PackageReference Include="DynamicData" Version="8.4.1" />
         <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
         <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
         <PackageReference Include="OscCore" Version="1.0.5" />
-        <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="9.1.2" />
+        <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="9.3.0" />
         <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.3.1" />
     </ItemGroup>
 
@@ -47,7 +60,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Views\ConfigWindow.axaml.cs">
+      <Compile Update="Views\ConfigurationWindow.axaml.cs">
         <DependentUpon>ConfigWindow.axaml</DependentUpon>
       </Compile>
     </ItemGroup>
