--- a/src/Pixsper.Cueordinator/Pixsper.Cueordinator.csproj
+++ b/src/Pixsper.Cueordinator/Pixsper.Cueordinator.csproj
@@ -30,23 +30,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.1.0-beta1" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.1.0-beta1" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.0-beta1" />
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.0-beta1" />
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0-beta1" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.0-beta1" />
-        <PackageReference Include="DynamicData" Version="8.4.1" />
-        <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-        <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
-        <PackageReference Include="OscCore" Version="1.0.5" />
-        <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="9.3.0" />
-        <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.3.1" />
+        <PackageReference Include="Avalonia" />
+        <PackageReference Include="Avalonia.Desktop" />
+        <PackageReference Include="Avalonia.Themes.Fluent" />
+        <PackageReference Include="Avalonia.Fonts.Inter" />
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
+        <PackageReference Include="Avalonia.ReactiveUI" />
+        <PackageReference Include="DynamicData" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
+        <PackageReference Include="Microsoft.Extensions.Http" />
+        <PackageReference Include="Nito.AsyncEx" />
+        <PackageReference Include="OscCore" />
+        <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" />
+        <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" />
     </ItemGroup>
 
     <ItemGroup>
